--- a/MPFmaster/MPFmaster.vcxproj.filters
+++ b/MPFmaster/MPFmaster.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="PathFinderStructs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="bswap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
